# unit-homework

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  example.cpp  example.h  main.cpp
src/2+2/: main.c
src/a^n/: CMakeLists.txt  main.cpp
src/elementofmassive/: CMakeLists.txt  main.cpp
src/example12/: example12.cpp  example12.h
src/factorial/: main.cpp
src/for/: CMakeLists.txt
src/hello_world/: hello_world.cpp
src/luck/: CMakeLists.txt  main.cpp
src/massive/: CMakeLists.txt  main.cpp
src/massive10/: CMakeLists.txt  main.cpp
src/massive11/: CMakeLists.txt  main.cpp
src/massive12/: CMakeLists.txt  main.cpp
src/massive13/: CMakeLists.txt  main.cpp
src/massive14/: CMakeLists.txt  main.cpp
src/massive15/: CMakeLists.txt  main.cpp
src/massive16/: CMakeLists.txt  main.cpp
src/massive17/: CMakeLists.txt  main.cpp
src/massive18/: CMakeLists.txt  main.cpp
src/massive2/: CMakeLists.txt  main.cpp
src/massive3/: CMakeLists.txt  main.cpp
src/massive4/: CMakeLists.txt  main.cpp
src/massive5/: CMakeLists.txt  main.cpp
src/massive6/: CMakeLists.txt  main.cpp
src/massive7/: CMakeLists.txt  main.cpp
src/massive8/: CMakeLists.txt  main.cpp
src/massive9/: CMakeLists.txt  main.cpp
src/procedure/: CMakeLists.txt  main.cpp
src/quick_example/: quick_example.cpp
src/squares/: CMakeLists.txt  main.cpp
src/sumofnumbers/: main.cpp
src/задание1/: main.cpp
src/задание2/: main.cpp
src/задание3/: main.cpp
src/задание4/: main.cpp
src/задание5/: main.cpp
src/задание6/: main.cpp
src/задание7/: main.cpp
(+20 files in other folders)
